examples/test/testpolicy722.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy722
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key4: value35
      key0: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value8
          key2: value34
      podSelector:
        matchLabels:
          key12: value37
          key45: value30
